--- a/assets/css/qrcode.css
+++ b/assets/css/qrcode.css
@@ -28,8 +28,11 @@
   .btn-option.url { background: #007bff; }
   .btn-option.wifi { background: #ff9800; }
   .btn-option.whatsapp { background: #25D366; }
-  .btn-option.texto { background: #9c27b0; }
-  .btn-option.email { background: #e91e63; }
+  .btn-option.texto { background: #5c1768; }
+  .btn-option.email { background: #1e2ce9; }
+  .btn-option.pix { background: #00bfa5; } /* Verde água PIX */
+  .btn-option.pix:hover { box-shadow: 0 0 15px #00bfa5; }
+
   
   .btn-option:hover {
     transform: translateY(-2px);
@@ -106,7 +109,7 @@
   
   #mensagem {
     font-size: 0.95em;
-    color: #bbb;
+    color: #bbbbbb;
     margin-top: 10px;
   }
   
