--- a/assets/partials/navbar.html
+++ b/assets/partials/navbar.html
@@ -17,7 +17,7 @@
 
         <!-- LOGIN padrão (aparece só quando NÃO estiver logado) -->
         <li class="nav-item" id="nav-login-item">
-          <a class="nav-link" href="login.html" id="login-link">Login</a>
+          <a class="nav-link" href="/login.html" id="login-link">Login</a>
         </li>
 
         <!-- Saudação (aparece só quando ESTIVER logado) -->
