--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -136,3 +136,22 @@ body {
 .back-link:hover {
   text-decoration: underline;
 }
+
+.field-help {
+  margin-top: 4px;
+  text-align: right;
+}
+
+.link-button {
+  background: none;
+  border: none;
+  color: #60a5fa;
+  font-size: 0.8rem;
+  padding: 0;
+  cursor: pointer;
+}
+
+.link-button:hover {
+  text-decoration: underline;
+}
+
