--- a/assets/partials/navbar.html
+++ b/assets/partials/navbar.html
@@ -20,12 +20,13 @@
           <a class="nav-link" href="login.html">Login</a>
         </li>
 
-        <!-- Saudação (aparece só quando ESTIVER logado) -->
+            <!-- Saudação (aparece só quando ESTIVER logado) -->
         <li class="nav-item d-none" id="nav-user-item">
-          <span class="nav-link">
+          <a class="nav-link" href="main.html" id="nav-user-link">
             Olá, <span id="user-name"></span>!
-          </span>
+          </a>
         </li>
+
 
         <!-- Botão Sair (aparece só quando ESTIVER logado) -->
         <li class="nav-item d-none" id="nav-logout-item">
